edit links and flesh out fears.html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section>
       <nav>
         <div class="title">Home</div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
@@ -55,14 +55,14 @@
     <section>
       <h6>Navigation.</h6>
       <nav>
-        <div><a href="tma/index.html" class="title">Magnus Archives</a></div>
-        <div><a href="tma/characters.html" class="subtitle">Characters</a></div>
-        <div><a href="tma/fears.html" class="subtitle">Dread Powers</a></div>
-        <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
+        <div><a href="tma/index" class="title">Magnus Archives</a></div>
+        <div><a href="tma/characters" class="subtitle">Characters</a></div>
+        <div><a href="tma/fears" class="subtitle">Dread Powers</a></div>
+        <div><a href="tma/episodes" class="subtitle">Episodes</a></div>
           <hr>
-        <div><a href="tmagp/index.html" class="title">Magnus Protocol</a></div>
-        <div><a href="tmagp/characters.html" class="subtitle">Characters</a></div>
-        <div><a href="tmagp/episodes.html" class="subtitle">Episodes</a></div>
+        <div><a href="tmagp/index" class="title">Magnus Protocol</a></div>
+        <div><a href="tmagp/characters" class="subtitle">Characters</a></div>
+        <div><a href="tmagp/episodes" class="subtitle">Episodes</a></div>
       </nav>
     </section>
   </aside>
@@ -80,8 +80,8 @@
         <section>
           <nav>
               <div class="title">Home</div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
@@ -97,14 +97,14 @@
         <section>
           <h6>Navigation.</h6>
           <nav>
-            <div><a href="tma/index.html" class="title">Magnus Archives</a></div>
-            <div><a href="tma/characters.html" class="subtitle">Characters</a></div>
-            <div><a href="tma/fears.html" class="subtitle">Dread Powers</a></div>
-            <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
+            <div><a href="tma/index" class="title">Magnus Archives</a></div>
+            <div><a href="tma/characters" class="subtitle">Characters</a></div>
+            <div><a href="tma/fears" class="subtitle">Dread Powers</a></div>
+            <div><a href="tma/episodes" class="subtitle">Episodes</a></div>
               <hr>
-            <div><a href="tmagp/index.html" class="title">Magnus Protocol</a></div>
-            <div><a href="tmagp/episodes.html" class="subtitle">Episodes</a></div>
-            <div><a href="tmagp/characters.html" class="subtitle">Characters</a></div>
+            <div><a href="tmagp/index" class="title">Magnus Protocol</a></div>
+            <div><a href="tmagp/episodes" class="subtitle">Episodes</a></div>
+            <div><a href="tmagp/characters" class="subtitle">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -130,7 +130,7 @@
           </p>
             <br>
           <p class="analysis">
-            <b>lastly,</b> this is <u>not a wiki</u>! i am documenting my thoughts, analyses, and <i>sometimes</i> opinions on the podcast and it's contents here! if you are looking for a wiki, i reccommend going <a href="https://the-magnus-archives.fandom.com/wiki/The_Magnus_Archives_Wikia">here</a> for TMA and <a href="https://themagnusprotocol.miraheze.org/wiki/The_Magnus_Protocol_Wiki">here</a> for TMagP!
+            <b>lastly,</b> this is <u>not a wiki</u>! although some information, at least for the beginning, is taken directly from the wiki, i am documenting my thoughts, analyses, and <i>sometimes</i> opinions on the podcast and it's contents here! if you are looking for a wiki, i reccommend going <a href="https://the-magnus-archives.fandom.com/wiki/The_Magnus_Archives_Wikia">here</a> for TMA and <a href="https://themagnusprotocol.miraheze.org/wiki/The_Magnus_Protocol_Wiki">here</a> for TMagP!
           </p>
         </div>
       </section>
