--- a/tma/index.html
+++ b/tma/index.html
@@ -36,17 +36,17 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../index.html" class="title">Home</a></div>
+        <div><a href="../index" class="title">Home</a></div>
         <div>Magnus Archives</div>
-        <div><a href="../tmagp/index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-          <div><a href="episodes.html" class="title">Episodes</a></div>
-          <div><a href="characters.html" class="title">Characters</a></div>
-          <div><a href="fears.html" class="subtitle">Entities</a></div>
+          <div><a href="episodes" class="title">Episodes</a></div>
+          <div><a href="characters" class="title">Characters</a></div>
+          <div><a href="fears" class="subtitle">Entities</a></div>
       </nav>
     </section>
   </aside>
@@ -55,19 +55,19 @@
     <section>
         <h6>the Magnus Archives.</h6>
         <nav>
-          <div><a href="episodes.html" class="title">Episodes</a></div>
-          <div><a href="season/1.html" class="subtitle">Season One</a></div>
-          <div><a href="season/2.html" class="subtitle">Season Two</a></div>
-          <div><a href="season/3.html" class="subtitle">Season Three</a></div>
-          <div><a href="season/4.html" class="subtitle">Season Four</a></div>
-          <div><a href="season/5.html" class="subtitle">Season Five</a></div>
+          <div><a href="episodes" class="title">Episodes</a></div>
+          <div><a href="season/1" class="subtitle">Season One</a></div>
+          <div><a href="season/2" class="subtitle">Season Two</a></div>
+          <div><a href="season/3" class="subtitle">Season Three</a></div>
+          <div><a href="season/4" class="subtitle">Season Four</a></div>
+          <div><a href="season/5" class="subtitle">Season Five</a></div>
             <hr>
-          <div><a href="characters.html" class="title">Characters</a></div>
-          <div><a href="char/institute.html" class="subtitle">Institute Employees</a></div>
-          <div><a href="char/recurring.html" class="subtitle">Recurring</a></div>
-          <div><a href="char/other.html" class="subtitle">Other</a></div>
+          <div><a href="characters" class="title">Characters</a></div>
+          <div><a href="char/institute" class="subtitle">Institute Employees</a></div>
+          <div><a href="char/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="char/minor" class="subtitle">Other</a></div>
             <hr>
-          <div><a href="fears.html" class="title">Entities</a></div>
+          <div><a href="fears" class="title">Entities</a></div>
         </nav>
       </section>
   </aside>
@@ -84,17 +84,17 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../index.html" class="title">Home</a></div>
+              <div><a href="../index" class="title">Home</a></div>
               <div class="subtitle">Magnus Archives</div>
-              <div><a href="../tmagp/index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="episodes.html" class="title">Episodes</a></div>
-              <div><a href="characters.html" class="title">Characters</a></div>
-              <div><a href="fears.html" class="subtitle">Entities</a></div>
+              <div><a href="episodes" class="title">Episodes</a></div>
+              <div><a href="characters" class="title">Characters</a></div>
+              <div><a href="fears" class="subtitle">Entities</a></div>
           </nav>
         </section>
       </aside>
@@ -102,19 +102,19 @@
         <section>
           <h6>the Magnus Archives.</h6>
           <nav>
-            <div><a href="episodes.html" class="title">Episodes</a></div>
-            <div><a href="season/1.html" class="subtitle">Season One</a></div>
-            <div><a href="season/2.html" class="subtitle">Season Two</a></div>
-            <div><a href="season/3.html" class="subtitle">Season Three</a></div>
-            <div><a href="season/4.html" class="subtitle">Season Four</a></div>
-            <div><a href="season/5.html" class="subtitle">Season Five</a></div>
+            <div><a href="episodes" class="title">Episodes</a></div>
+            <div><a href="season/1" class="subtitle">Season One</a></div>
+            <div><a href="season/2" class="subtitle">Season Two</a></div>
+            <div><a href="season/3" class="subtitle">Season Three</a></div>
+            <div><a href="season/4" class="subtitle">Season Four</a></div>
+            <div><a href="season/5" class="subtitle">Season Five</a></div>
               <hr>
-            <div><a href="characters.html" class="title">Characters</a></div>
-            <div><a href="char/institute.html" class="subtitle">Institute Employees</a></div>
-            <div><a href="char/recurring.html" class="subtitle">Recurring</a></div>
-            <div><a href="char/other.html" class="subtitle">Other</a></div>
+            <div><a href="characters" class="title">Characters</a></div>
+            <div><a href="char/institute" class="subtitle">Institute Employees</a></div>
+            <div><a href="char/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="char/minor" class="subtitle">Other</a></div>
               <hr>
-            <div><a href="fears.html" class="title">Entities</a></div>
+            <div><a href="fears" class="title">Entities</a></div>
           </nav>
         </section>
       </aside>
