--- a/tma/season/1.html
+++ b/tma/season/1.html
@@ -36,17 +36,17 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../index" class="title">Home</a></div>
+        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="../episodes.html" class="title">Episodes</a></div>
-        <div><a href="../characters.html" class="title">Characters</a></div>
-        <div><a href="2.html" class="subtitle">Next Season</a></div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
+        <div><a href="../characters" class="title">Characters</a></div>
+        <div><a href="2" class="subtitle">Next Season</a></div>
       </nav>
     </section>
   </aside>
@@ -73,17 +73,17 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../index" class="title">Home</a></div>
+              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="../episodes.html" class="title">Episodes</a></div>
-              <div><a href="../characters.html" class="title">Characters</a></div>
-              <div><a href="2.html" class="subtitle">Next Season</a></div>
+              <div><a href="../episodes" class="title">Episodes</a></div>
+              <div><a href="../characters" class="title">Characters</a></div>
+              <div><a href="2" class="subtitle">Next Season</a></div>
           </nav>
         </section>
       </aside>
