--- a/tmagp/char/oiar.html
+++ b/tmagp/char/oiar.html
@@ -36,18 +36,17 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../index" class="title">Home</a></div>
+        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="../episodes.html" class="title">Episodes</a></div>
-        <div><a href="recurring.html" class="subtitle">Recurring Characters</a></div>
-        <div><a href="minor.html" class="subtitle">Minor Characters</a></div>
-        <div><a href="#Algorithms" class="subtitle">Algorithms</a></div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
+        <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+        <div><a href="minor" class="subtitle">Minor Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -59,6 +58,7 @@
           <div><a href="#Current" class="title">Current Staff</a></div>
           <div><a href="#Externals" class="subtitle">Externals</a></div>
           <div><a href="#Former" class="subtitle">Former Staff</a></div>
+          <div><a href="#Algorithms" class="subtitle">Algorithms</a></div>
         </nav>
     </section>
   </aside>
@@ -204,18 +204,18 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../index" class="title">Home</a></div>
+              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-            <div><a href="../episodes.html" class="title">Episodes</a></div>
+            <div><a href="../episodes" class="title">Episodes</a></div>
             <div class="subtitle">O.I.A.R. Employees</div>
-            <div><a href="recurring.html" class="subtitle">Recurring Characters</a></div>
-            <div><a href="minor.html" class="subtitle">Minor Characters</a></div>
+            <div><a href="recurring" class="subtitle">Recurring Characters</a></div>
+            <div><a href="minor" class="subtitle">Minor Characters</a></div>
           </nav>
         </section>
       </aside>
