--- a/tmagp/episodes.html
+++ b/tmagp/episodes.html
@@ -36,16 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../index" class="title">Home</a></div>
+        <div><a href="index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
         <div class="title">Episodes</div>
-        <div><a href="characters.html" class="title">Characters</a></div>
+        <div><a href="characters" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -72,16 +72,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-            <div><a href="../index.html" class="title">Home</a></div>
-            <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
-            <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../index" class="title">Home</a></div>
+            <div><a href="index" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
               <div class="title">Episodes</div>
-              <div><a href="characters.html" class="title">Characters</a></div>
+              <div><a href="characters" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -98,7 +98,7 @@
 
     <article>
       <section class="synopsis">
-        <h4></h4>
+        <h4>Non Vacillabimus.</h4>
       </section>
       <section>
         <div id="">
@@ -108,12 +108,35 @@
       <section class="cluster">
         <div>
           <p class="analysis">
+            this is the hub-page to access <b>the magnus protocol</b> episode pages. select a season! (not much choice as of now, although there will be three total!)
           </p>
         </div>
       </section>
-      <!--<section class="quote">
-        <h4></h4>
-      </section>-->
+      <section class="cardsel">
+        <section class="cardsel">
+          <div class="cardwrap">
+            <a href="season/1">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">Season One</p></span>
+                        <p class="ds">the first season of TMagP.</p>
+                          <hr>
+                        <p class="lm">go to season.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </section>
+      </section>
+      <section class="quote">
+        <h4>Fear takes many forms.</h4>
+      </section>
     </article>
   </main>
 
