--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -36,16 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../index.html" class="title">Home</a></div>
-        <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index" class="title">Home</a></div>
+        <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
         <div class="subtitle">Magnus Protocol</div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="episodes.html" class="title">Episodes</a></div>
-        <div><a href="characters.html" class="title">Characters</a></div>
+        <div><a href="episodes" class="title">Episodes</a></div>
+        <div><a href="characters" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -54,13 +54,13 @@
     <section>
         <h6>the Magnus Protocol.</h6>
         <nav>
-          <div><a href="episodes.html" class="title">Episodes</a></div>
-          <div><a href="season/1.html" class="subtitle">Season One</a></div>
+          <div><a href="episodes" class="title">Episodes</a></div>
+          <div><a href="season/1" class="subtitle">Season One</a></div>
             <hr>
-          <div><a href="characters.html" class="title">Characters</a></div>
-          <div><a href="character/oiar.html" class="subtitle">O.I.A.R. Staff</a></div>
-          <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
-          <div><a href="character/other.html" class="subtitle">Others</a></div>
+          <div><a href="characters" class="title">Characters</a></div>
+          <div><a href="char/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+          <div><a href="char/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="char/minor" class="subtitle">Others</a></div>
         </nav>
       </section>
   </aside>
@@ -77,16 +77,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-            <div><a href="../index.html" class="title">Home</a></div>
-            <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../index" class="title">Home</a></div>
+            <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
             <div class="subtitle">Magnus Protocol</div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="episodes.html" class="title">Episodes</a></div>
-              <div><a href="characters.html" class="title">Characters</a></div>
+              <div><a href="episodes" class="title">Episodes</a></div>
+              <div><a href="characters" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -94,13 +94,13 @@
         <section>
           <h6>the Magnus Protocol.</h6>
           <nav>
-            <div><a href="episodes.html" class="title">Episodes</a></div>
-            <div><a href="season/1.html" class="subtitle">Season One</a></div>
+            <div><a href="episodes" class="title">Episodes</a></div>
+            <div><a href="season/1" class="subtitle">Season One</a></div>
               <hr>
-            <div><a href="characters.html" class="title">Characters</a></div>
-            <div><a href="character/oiar.html" class="subtitle">O.I.A.R. Staff</a></div>
-            <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
-            <div><a href="character/other.html" class="subtitle">Others</a></div>
+            <div><a href="characters" class="title">Characters</a></div>
+            <div><a href="char/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+            <div><a href="char/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="char/minor" class="subtitle">Others</a></div>
           </nav>
         </section>
       </aside>
@@ -126,7 +126,7 @@
           </p>
             <br>
           <p class="analysis">
-            while we don't know the status of <a href="../tma/fears.html">the Entities</a>, i may refer to them in my analyses of the episodes; i will at least point out the presence of their <i>general themes</i> within episodes and, at times, refer to them by name. <b>this is due to change once we learn more about this reality and how the Fears work within it, if at all;</b> nonetheless, unless there's new thematic elements and different Entities, in whatever forms, i will refer back to the ones from Archives.
+            while we don't know the status of <a href="../tma/fears">the Entities</a>, i may refer to them in my analyses of the episodes; i will at least point out the presence of their <i>general themes</i> within episodes and, at times, refer to them by name. <b>this is due to change once we learn more about this reality and how the Fears work within it, if at all;</b> nonetheless, unless there's new thematic elements and different Entities, in whatever forms, i will refer back to the ones from Archives.
           </p>
         </div>
       </section>
