--- a/tmagp/season/1.html
+++ b/tmagp/season/1.html
@@ -36,16 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../index" class="title">Home</a></div>
+        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="../episodes.html" class="title">Episodes</a></div>
-        <div><a href="../characters.html" class="title">Characters</a></div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
+        <div><a href="../characters" class="title">Characters</a></div>
         <div class="subtitle">Next Season</div>
       </nav>
     </section>
@@ -73,16 +73,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../index" class="title">Home</a></div>
+              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="../episodes.html" class="title">Episodes</a></div>
-              <div><a href="../characters.html" class="title">Characters</a></div>
+              <div><a href="../episodes" class="title">Episodes</a></div>
+              <div><a href="../characters" class="title">Characters</a></div>
               <div class="subtitle">Next Season</div>
           </nav>
         </section>
@@ -100,7 +100,7 @@
 
     <article>
       <section class="synopsis">
-        <h4></h4>
+        <h4>Non Vacillabimus.</h4>
       </section>
       <section>
         <div id="">
@@ -113,9 +113,413 @@
           </p>
         </div>
       </section>
-      <!--<section class="quote">
-        <h4></h4>
-      </section>-->
+      <section class="cardsel">
+        <section class="cardsel">
+          <div class="cardwrap">
+            <a href="../magp/001">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP001</p></span>
+                        <p class="name">
+                          First Shift
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/002">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP002</p></span>
+                        <p class="name">
+                          Making Adjustments
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/003">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP003</p></span>
+                        <p class="name">
+                          Putting Down Roots
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/004">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP004</p></span>
+                        <p class="ds">
+                          Taking Notes
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/005">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP005</p></span>
+                        <p class="ds">
+                          Personal Screening
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/006">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP006</p></span>
+                        <p class="ds">
+                          Introductions
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/007">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP007</p></span>
+                        <p class="ds">
+                          Give and Take
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/008">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP008</p></span>
+                        <p class="ds">
+                          Running on Empty
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/009">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP009</p></span>
+                        <p class="ds">
+                          Rolling With It
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/010">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP010</p></span>
+                        <p class="ds">
+                          Saturday Night
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/011">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP011</p></span>
+                        <p class="ds">
+                          Marked
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/012">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP012</p></span>
+                        <p class="ds">
+                          Getting Off
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/013">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP013</p></span>
+                        <p class="ds">
+                          Futures
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/014">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP014</p></span>
+                        <p class="ds">
+                          Pet Project
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/015">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP015</p></span>
+                        <p class="ds">
+                          Well Run
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/016">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP016</p></span>
+                        <p class="ds">
+                          Anti-Social
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/017">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP017</p></span>
+                        <p class="ds">
+                          Saved Copy
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/018">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP018</p></span>
+                        <p class="ds">
+                          Solo Work
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/019">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP019</p></span>
+                        <p class="ds">
+                          Hard Reset
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="cardwrap">
+            <a href="../magp/020">
+              <div class="cards">
+                <div class="cards-item">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-text">
+                        <span class="names"><p class="name">MAGP020</p></span>
+                        <p class="ds">
+                          Social Stigma
+                        </p>
+                          <hr>
+                        <p class="lm">go to episode.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </section>
+      </section>
+      <section class="quote">
+        <h4>Fear takes many forms.</h4>
+      </section>
     </article>
   </main>
 
