--- a/tma/characters.html
+++ b/tma/characters.html
@@ -36,17 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../mortalgarden.github.io/" class="title">Home</a></div>
+        <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div><a href="episodes" class="title">Episodes</a></div>
+        <div class="title">Characters</div>
       </nav>
     </section>
   </aside>
@@ -73,17 +72,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../../mortalgarden.github.io/" class="title">Home</a></div>
+            <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+            <div><a href="episodes" class="title">Episodes</a></div>
+            <div class="title">Characters</div>
           </nav>
         </section>
       </aside>
