--- a/tma/episodes.html
+++ b/tma/episodes.html
@@ -36,17 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../index" class="title">Home</a></div>
+        <div><a href="index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        <div class="title">Episodes</div>
+        <div><a href="characters" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -73,16 +72,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../index" class="title">Home</a></div>
+              <div><a href="index" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="tma/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tma/characters.html" class="title">Characters</a></div>
+            <div class="title">Episodes</div>
+            <div><a href="characters" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
