--- a/tmagp/characters.html
+++ b/tmagp/characters.html
@@ -36,15 +36,15 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../index.html" class="title">Home</a></div>
-        <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../index" class="title">Home</a></div>
+        <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="index" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="episodes.html" class="title">Episodes</a></div>
+        <div><a href="episodes" class="title">Episodes</a></div>
         <div class="title">Characters</div>
       </nav>
     </section>
@@ -72,15 +72,15 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-            <div><a href="../index.html" class="title">Home</a></div>
-            <div><a href="../tma/index.html" class="subtitle">Magnus Archives</a></div>
-            <div><a href="index.html" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../index" class="title">Home</a></div>
+            <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
+            <div><a href="index" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="episodes.html" class="title">Episodes</a></div>
+              <div><a href="episodes" class="title">Episodes</a></div>
               <div class="title">Characters</div>
           </nav>
         </section>
